Fixed display on mobile site a bit.

--- a/public_html/css/example/layout.css
+++ b/public_html/css/example/layout.css
@@ -4,8 +4,7 @@
 	padding: 1.618em;
 	margin: 0 auto; 
 	max-width: 60em;
-	
-	}
+}
 
 #nav {
 	max-width: 10em;
@@ -69,8 +68,6 @@ div.profile_img {
 /* 9. CUSTOM LAYOUT & TYPOGRAPHY (Mummy bear)
 ----------------------------------------------------------------------------------------*/
 @media screen and (min-width: 30em) and (max-width: 63.236em) {
-
-#container { width: 30em; }
 
 header h2:before, header h2:after { width: 35%; }
 
